# Shard

./: .gitignore  README.md  pyproject.toml
Formula/: shard.rb
src/shard/: __init__.py  aggregator.py  cli.py  config.py  dispatcher.py  git_manager.py  models.py  orchestrator.py  planner.py  state.py  tui.py
src/worktree/: __init__.py  aggregator.py  cli.py  config.py  dispatcher.py  git_manager.py  models.py  orchestrator.py  planner.py  state.py  tui.py
tests/: test_aggregator.py  test_config.py  test_dispatcher.py  test_models.py  test_planner.py  test_state.py
