[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worktree"
version = "1.0.0rc1"
description = "A TDD-Driven, Parallelized AI Coding Orchestrator"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "nihalgunu", email = "nihalgunukula@gmail.com" },
]
keywords = ["ai", "coding", "orchestrator", "tdd", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "jsonschema>=4.20.0",
    "networkx>=3.2",
    "tiktoken>=0.5.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "msgpack>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-json-report>=1.5.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.scripts]
worktree = "worktree.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/worktree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
